# MY_FINAL_PROJECT

./: CMakeLists.txt  ChanceCard.cpp  ChanceCard.h  ChanceCardFactory.cpp  ChanceCardFactory.h  PlayerWidget.ui  README.md  TileDetailsWidget.cpp  TileDetailsWidget.h  TileDetailsWidget.ui  board.json  boardwidget.cpp  boardwidget.ui  events.h  gamecontroller.cpp  gamecontroller.h  gameobserver.cpp  gameobserver.h  gameview.cpp  gameview.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monopoly.cpp  monopoly.h  player.cpp  player.h  playertoken.cpp  playertoken.h  playertoken.ui  property_details_widget.ui  resources.qrc  template_window.ui  tile.cpp  tile.h  tilefactory.cpp  (+4 more)
