cmake_minimum_required(VERSION 3.16)

project(Monopoly VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
    main.cpp



)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(Monopoly
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        board.json   CMakeLists.txt CMakeLists.txt.user events.h gamecontroller.cpp gamecontroller.h gameobserver.cpp gameobserver.h gameview.cpp gameview.h gamewindow.cpp gamewindow.h gamewindow.ui json.hpp main.cpp mainwindow.cpp mainwindow.h mainwindow.ui monopoly.cpp monopoly.h player.cpp player.h playertoken.cpp playertoken.h playertoken.ui PlayerWidget.ui property_details_widget.ui resources.qrc template_window.ui tile.cpp tile.h TileDetailsWidget.cpp TileDetailsWidget.h TileDetailsWidget.ui tilefactory.cpp tilefactory.h tilewidget.ui widgets.cpp widgets.h
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET Monopoly APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(Monopoly SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(Monopoly
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(Monopoly PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Monopoly)
endif()
set_target_properties(Monopoly PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS Monopoly
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(Monopoly)
endif()
